--- a/sensors.yaml
+++ b/sensors.yaml
@@ -70,9 +70,9 @@
 
 
   - platform: rest
-    resource: https://raw.githubusercontent.com/home-assistant/hassio/dev/version.json
+    resource: https://pypi.python.org/pypi/homeassistant/json
     name: HA Latest Version
-    value_template: '{{ value_json.homeassistant }}'
+    value_template: '{{ value_json.info.version }}'
 
   - platform: version
     name: HA Installed Version
